fix query adress